modules/security/sg_http_https/sg.tf

variable "sg_name" {
  description = "The name for the security group"
}

variable "vpc_id" {
  description = "The VPC this security group will go in"
}

variable "source_cidr_block" {
  description = "The source CIDR block to allow traffic from"
}
resource "aws_security_group" "security_group" {
    name = "${var.sg_name}"
    description = "Security Group ${var.sg_name}"
    vpc_id = "${var.vpc_id}"

    // allow traffic for TCP 80
    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["${split(",",var.source_cidr_block)}"]
    }

    // allow traffic for TCP 443
    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["${split(",",var.source_cidr_block)}"]
    }

}

output "sg_id" {
  value = "${aws_security_group.security_group.id}"
}
